--- a/main.css
+++ b/main.css
@@ -4,17 +4,14 @@
     margin: 0px;
     padding: 0px;
 }
-
 h1 {
     color: #210700;
-
 font-family: Merriweather;
 font-size: 1.5rem;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
 }
-
 h2 {
     color: #210700;
     font-family: Merriweather;
@@ -23,7 +20,6 @@ h2 {
     font-weight: 700;
     line-height: normal;
 }
-
 h3 {
     color: #210700;
     font-family: Inter;
@@ -32,7 +28,6 @@ h3 {
     font-weight: 700;
     line-height: normal;
 }
-
 p {
     color: #210700;
     font-family: Inter;
@@ -41,16 +36,13 @@ p {
     font-weight: 400;
     line-height: 0.875rem; /* 140% */
 }
-
 a {
     text-decoration: none;
     color: #210700;;
 }
-
 ul {
     list-style-type: none;
 }
-
 button {
     width: 102px;
     height: 30.108px;
@@ -66,35 +58,29 @@ button {
     color: #FFFCF8;
     font-weight: 900;
 }
-
 /* Header */
 .top__logo__img {
     width: 6.6875rem;
     height: 1.9375rem;
     margin-top: 8px;
 }
-
 .header__top__logo {
     display: flex;
     justify-content: center;
 }
-
 .header__top {
     background: #84917F;
     width: 100%;
     height: 48px;
 }
-
 .header__desktop {
     display: none;
 }
-
 .header__mobil__bottom {
     width: 100%;
     height: 15px;
     background: #D9C4B0;
 }
-
 /* hero */
 .hero {
     position: relative;
@@ -103,11 +89,9 @@ button {
     overflow: hidden;
     background-color: #D9C4B0;
 }
-
 .hero__billede__disktop {
     display: none;
 }
-
 .hero__billede__mobil {
     width: 100%;
     opacity: 0.3;
@@ -115,7 +99,6 @@ button {
     position: absolute;
     object-fit: cover;
 }
-
 .hero__text {
     width: 100%;
     height: 17.5rem;
@@ -125,41 +108,31 @@ button {
     justify-content: center;
     margin: 20px;
 }
-
 .hero__p {
     padding: 0rem 0rem 1rem 0rem;
 }
-
 /*forside design selv*/
-
 .forside__designselv__tekst {
     margin: 30px 20px 15px 20px;
 }
-
 .forside__designselv__p {
     padding: 15px 0px;
 }
-
 .placeholder__forside__img {
     width: 100%;
     padding: 0px 20px 15px 20px;
 }
-
 /* forside butikken*/
-
 .forside__butikken__img {
     width: 100%;
     padding: 0px 20px 15px 20px;
 }
-
 .forsiden__butikken__tekst {
     margin: 0px 20px 15px 20px;
 }
-
 .forside__butikken__p {
     padding: 15px 0px;
 }
-
 @media (min-width: 600px) {
     
     h1 {
@@ -170,7 +143,6 @@ button {
         font-weight: 700;
         line-height: normal;
     }
-
     h2 {
         color: #210700;
         font-family: Merriweather;
@@ -197,18 +169,15 @@ button {
         font-weight: 400;
         line-height: 1rem; /* 150% */
     }
-
     button {
         width: 130px;
         height: 39px;
         font-size: 0.8rem;
     }
-
     /* hero */
     .hero {
         height: 27rem;
     }
-
     .hero__text {
         width: 100%;
         height: 27rem;
@@ -218,10 +187,8 @@ button {
         justify-content: center;
         margin: 30px;
     }
-
     
 }
-
 @media (min-width: 1024px) {
     h1 {
         color: #000;
@@ -231,7 +198,6 @@ button {
         font-weight: 700;
         line-height: normal;
     }
-
     h2 {
         color: #210700;
         font-family: Merriweather;
@@ -240,7 +206,6 @@ button {
         font-weight: 700;
         line-height: normal;
     }
-
     h3 {
         color: #210700;
         font-family: Inter;
@@ -249,7 +214,6 @@ button {
         font-weight: 700;
         line-height: normal;
     }
-
     p {
         color: #210700;
         font-family: Inter;
@@ -258,13 +222,11 @@ button {
         font-weight: 400;
         line-height: 1.875rem; /* 150% */
     }
-
     button {
         width: 200px;
         height: 59px;
         font-size: 1rem;
     }
-
     /*header*/
     .top__logo__img {
         width: 182px;
@@ -290,18 +252,15 @@ button {
     .header__mobil__bottom {
         display: none;
     }
-
     .header__desktop__bottom {
         width: 100%;
         height: 50px;
         background: #D9C4B0;
     }
-
     .nav__desktop__li:hover {
         color: #72483C;
         font-weight: 900;
     }
-
     .header__desktop__nav {
         display: flex;
         justify-content: center;
@@ -313,16 +272,13 @@ button {
         font-weight: 400;
         line-height: normal;
     }
-
     .nav__desktop__dropdown {
         position: relative;
     }
-
     .desktop__dropdown__link:hover {
         color: #72483C;
         font-weight: 900;
     }
-
     .header__desktop__ul {
         display: flex;
         gap: 30px;
@@ -336,26 +292,20 @@ button {
         border-radius: 1.25rem;
         font-size: 0.8rem;
     }
-
     .desktop__dropdown__li {
         padding: 5px 0px;
     }
-
     .desktop__dropdown__link:hover {
         color: #72483C;
         font-weight: 900;
     }
-
     .nav__desktop__dropdown:hover .desktop__dropdown__ul {
         display: block;
     }
-
     /* hero */
-
     .hero__billede__mobil {
         display: none;
     }
-
     .hero__billede__disktop {
         width: 100%;
         opacity: 0.3;
@@ -363,11 +313,9 @@ button {
         position: absolute;
         object-fit: cover;
     }
-
     .hero {
         height: 39rem;
     }
-
     .hero__text {
         width: 100%;
         height: 27rem;
@@ -377,5 +325,39 @@ button {
         justify-content: center;
         margin: 60px;
     }
+
+    /*forside designselv*/
+
+    .forside__designselv {
+        display: flex;
+        padding: 30px 60px 30px 60px;
+        align-items: center;
+    }
+
+    .forside__designselv__video {
+        width: 50%;
+    }
+
+    .forside__designselv__tekst {
+        width: 50%;
+    }
+
+    /* forside butikken*/
+
+    .forside__butikken {
+        display: flex;
+        padding: 30px 60px 30px 60px;
+        align-items: center;
+    }
+
+    .forside__butikken__img {
+        width: 50%;
+    }
+
+    .forsiden__butikken__tekst {
+        width: 50%;
+    }
+
+
 
 }
