--- a/main.css
+++ b/main.css
@@ -6,11 +6,11 @@
 }
 h1 {
     color: #210700;
-font-family: Merriweather;
-font-size: 1.5rem;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+    font-family: Merriweather;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 h2 {
     color: #210700;
@@ -149,13 +149,14 @@ button:hover {
 
 .forside__find-gavekurv__h2{
     color:#FFFCF8;
-    text-align:center;
+    padding:0 5px 0 5px;
     margin-bottom:1rem;
 }
 
 .forside__find-gavekurv__galleri{
+    height:400px;
     overflow-x:auto;
-    padding:0 2rem;
+    margin:0 5px 0 0;
 }
 
 .forside__find-gavekurv__liste{
@@ -163,42 +164,58 @@ button:hover {
     gap: 1rem;
     overflow:auto;
     list-style:none;
-    padding:0;
-    margin:0;
 
 }
 
 .forside__find-gavekurv__item{
-    flex: 0 0 auto;
+    display: flex;
     min-width:250px;
+    overflow:hidden;
+    flex-direction:column;
     background-color: #D9C4B0;
     padding:1rem;
     border-radius:1rem;
-    text-align:center;
     box-shadow: 0 4px 8px #000;
 }
 
-.forside__find-gavekurv h3{
-    margin: 0.5 rem 0 0.25rem;
-    font-size:1.1rem;
+.forside__find-gavekurv__billede-wrapper{
+    width:100%;
+    height:200px;
+    overflow:hidden;
 }
 
-.forside__find-gavekurv__button{
-    background-color:#84917F;
-    color:#FFFCF8;
-    border:none;
-    padding:0.5rem 1rem;
-    cursor:pointer;
+.forside__find-gavekurv__billede-wrapper img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    display:block;
+}
+
+.forside__find-gavekurv__indhold{
+    padding:1rem;
+}
+
+.forside__find-gavekurv__item h3{
+    display:flex;
+}
+
+.forside__find-gavekurv__pris{
+    display: flex;
+
 }
 
 #galleri__prevButton, #galleri__nextButton{
     position:absolute;
-    top:50%;
+    top:80%;
     transform: translateY(-50%);
     background:none;
     border:none;
     font-size:2rem;
     color:#FFFCF8;
+}
+
+#galleri__prevButton:hover, #galleri__nextButton:hover{
+    color:#210700;
 }
 
 #galleri__prevButton{
