--- a/main.css
+++ b/main.css
@@ -170,17 +170,17 @@ button:hover {
 .forside__find-gavekurv__item{
     display: flex;
     min-width:250px;
+    height:350px;
     overflow:hidden;
     flex-direction:column;
     background-color: #D9C4B0;
-    padding:1rem;
     border-radius:1rem;
     box-shadow: 0 4px 8px #000;
 }
 
 .forside__find-gavekurv__billede-wrapper{
     width:100%;
-    height:200px;
+    height:80%;
     overflow:hidden;
 }
 
@@ -189,6 +189,8 @@ button:hover {
     height:100%;
     object-fit:cover;
     display:block;
+    padding:0;
+    margin:0;
 }
 
 .forside__find-gavekurv__indhold{
