--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ button:hover {
     justify-content: center;
 }
 .header__top {
-    background: #84917F;
+    background: #e62acd;
     width: 100%;
     height: 48px;
 }
