--- a/main.css
+++ b/main.css
@@ -86,6 +86,18 @@ button:hover {
     height: 15px;
     background: #D9C4B0;
 }
+
+#soegefeltButton {
+    background-color: transparent;
+    position: absolute;
+    z-index: 10;
+    border-radius: 0px;
+}
+
+.soegefeltBillede {
+    width: 20%;
+}
+
 /* hero */
 .hero {
     position: relative;
