--- a/main.css
+++ b/main.css
@@ -117,6 +117,24 @@ button:hover {
     justify-content: space-around;
 }
 
+
+#lukKnap {
+    background-color: transparent;
+    position: absolute;
+    z-index: 10;
+    width: 30%;
+    height: 0px;
+    border-radius: 0px;
+}
+
+#indputFelt {
+    position: absolute;
+    border: #210700;
+    width: 100%;
+    z-index: 10000;
+}
+
+
 /* hero */
 .hero {
     position: relative;
