--- a/main.css
+++ b/main.css
@@ -50,6 +50,7 @@ ul {
     list-style-type: none;
 }
 
+
 button {
     width: 102px;
     height: 30.108px;
@@ -131,7 +132,38 @@ button:hover {
     position: absolute;
     border: #210700;
     width: 100%;
-    z-index: 10000;
+    z-index: 100;
+    background-color: #FFFCF8;
+    color: #210700;
+    font-family: Inter;
+    font-size: 0.625rem;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 0.875rem; /* 140% */
+    padding: 10px;
+}
+
+#soegeResultater {
+    position: absolute;
+    z-index: 10;
+    background-color: #FFFCF8;
+    color: #210700;
+    font-family: Inter;
+    font-size: 0.625rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 0.875rem; /* 140% */
+    margin: 35px 0px 0px 0px;
+    width: 100%;
+}
+
+#soegeResultater li {
+    padding: 15px;
+}
+
+#soegeResultater li a:hover {
+    color: #72483C;
+    font-weight: 900;
 }
 
 
