--- a/main.css
+++ b/main.css
@@ -225,7 +225,8 @@ button:hover {
     height:500px;
     position:relative;
     background-color:#84917F;
-    padding:2rem 0 0 1.2rem;
+    padding:2rem 0 0 1rem;
+    margin-bottom:1.2rem;
 }
 
 .forside__find-gavekurv__h2{
@@ -235,7 +236,7 @@ button:hover {
 }
 
 .forside__find-gavekurv__galleri{
-    height:100%;
+    height:75%;
     position: relative;
 }
 
@@ -253,7 +254,6 @@ button:hover {
 .forside__find-gavekurv__liste{
     display:flex;
     gap: 1rem;
-    overflow:auto;
     list-style:none;
 
 }
@@ -266,8 +266,8 @@ button:hover {
     flex-direction:column;
     background-color: #D9C4B0;
     border-radius:1rem;
-    overflow:hidden;
-    box-shadow: 0 4px 8px #000;
+    box-shadow: 0 4px 4px #615959;
+    margin:1rem 0.5rem;
     
 }
 
@@ -304,9 +304,10 @@ button:hover {
     margin: 0 auto;
 }
 
-#galleri__prevButton, #galleri__nextButton{
+#galleri__prevButton,
+#galleri__nextButton{
     position:absolute;
-    top:90%;
+    top:92%;
     transform: translateY(-50%);
     background:none;
     border:none;
@@ -314,7 +315,8 @@ button:hover {
     color:#FFFCF8;
 }
 
-#galleri__prevButton:hover, #galleri__nextButton:hover{
+#galleri__prevButton:hover, 
+#galleri__nextButton:hover{
     color:#210700;
 }
 
