--- a/main.css
+++ b/main.css
@@ -86,7 +86,9 @@ button:hover {
 .header__top {
     background: #84917F;
     width: 100%;
-    height: 48px;
+    height: 48px; 
+    display: flex;
+    justify-content: space-between;
 }
 
 .header__desktop {
@@ -99,23 +101,31 @@ button:hover {
     background: #D9C4B0;
 }
 
+.desktop__ikoner__kurv {
+    width: 30px;
+    height: 15px;
+    margin: 8px 20px 5px 10px;
+}
+
+.desktop__kurv__img {
+    width: 100%;
+}
+
+.header__mobil__ikoner {
+    display: flex;
+}
+
 #soegefeltButton {
     background-color: transparent;
-    position: absolute;
     z-index: 10;
-    width: 30%;
-    height: 0px;
+    width: 30px;
+    height: 15px;
     border-radius: 0px;
 }
 
 .soegefeltBillede {
-    width: 20%;
+    width: 100%;
     margin: 8px 20px 0px 0px;
-}
-
-.header__top {
-    display: flex;
-    justify-content: space-around;
 }
 
 
@@ -151,7 +161,7 @@ button:hover {
     font-family: Inter;
     font-size: 0.625rem;
     font-style: normal;
-    font-weight: 900;
+    font-weight: 400;
     line-height: 0.875rem; /* 140% */
     margin: 34px 0px 0px 0px;
     width: 100%;
@@ -165,8 +175,6 @@ button:hover {
     color: #72483C;
     font-weight: 900;
 }
-
-
 
 
 /* hero */
@@ -390,7 +398,7 @@ button:hover {
     h1 {
         color: #000;
         font-family: Merriweather;
-        font-size: 4.375rem;
+        font-size: 3.5rem;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
@@ -398,7 +406,7 @@ button:hover {
     h2 {
         color: #210700;
         font-family: Merriweather;
-        font-size: 2.8125rem;
+        font-size: 2rem;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
@@ -406,7 +414,7 @@ button:hover {
     h3 {
         color: #210700;
         font-family: Inter;
-        font-size: 1.5rem;
+        font-size: 1rem;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
@@ -414,7 +422,7 @@ button:hover {
     p {
         color: #210700;
         font-family: Inter;
-        font-size: 1.25rem;
+        font-size: 1rem;
         font-style: normal;
         font-weight: 400;
         line-height: 1.875rem; /* 150% */
@@ -469,7 +477,7 @@ button:hover {
         align-items: center;
         color: #000;
         font-family: Inter;
-        font-size: 1rem;
+        font-size: 0.9rem;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
@@ -504,6 +512,91 @@ button:hover {
     .nav__desktop__dropdown:hover .desktop__dropdown__ul {
         display: block;
     }
+
+    .header__desktop__bottom {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .header__desktop__ikoner {
+        display: flex;
+    }
+
+    .desktop__kurv__img {
+        width: 100%;
+        margin: 8px 0px 0px 0px;
+    }
+
+    .desktop__ikoner__kurv {
+        width: 30px;
+        height: 40px;
+        margin: 0px 60px 0px 20px;
+    }
+
+    #soegefeltButtonDesktop {
+        background-color: transparent;
+        width: 30px;
+        height: 40px;
+    }
+    
+    .soegefeltBilledeDesktop {
+        width: 100%;
+        margin: 8px 20px 0px 0px;
+    }
+    
+    .header__top {
+        display: flex;
+        justify-content: space-around;
+    }
+    
+    #lukKnapDesktop {
+        background-color: transparent;
+        position: absolute;
+        z-index: 100;
+        border-radius: 0px;
+        color: #210700;
+        margin: 0px 90%;
+        height: 50px;
+        width: 10px;
+    }
+    
+    #indputFeltDesktop {
+        position: absolute;
+        border: #210700;
+        width: 100%;
+        z-index: 10;
+        background-color: #FFFCF8;
+        color: #210700;
+        font-family: Inter;
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 900;
+        line-height: 0.875rem; /* 140% */
+        padding: 10px;
+    }
+    
+    #soegeResultaterDesktop {
+        position: absolute;
+        z-index: 10;
+        background-color: #FFFCF8;
+        color: #210700;
+        font-family: Inter;
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 0.875rem; /* 140% */
+        margin: 34px 0px 0px 0px;
+        width: 100%;
+    }
+    
+    #soegeResultaterDesktop li {
+        padding: 15px;
+    }
+    
+    #soegeResultaterDesktop li a:hover {
+        color: #72483C;
+        font-weight: 900;
+    }    
 
     /* hero */
     .hero__billede__mobil {
