--- a/main.css
+++ b/main.css
@@ -350,7 +350,7 @@ button:hover {
 .designselv__menu__button {
     color: #72483C;
     font-family: Inter;
-    font-size: 0.625rem;
+    font-size: 0.55rem;
     font-style: normal;
     font-weight: 400;
     line-height: 0.875rem; /* 140% */
@@ -360,10 +360,19 @@ button:hover {
     margin: 5px;
 }
 
+.designselv__menu__button:hover {
+    font-weight: 900;
+    background-color: transparent;
+}
+
 .designselv__menu {
     background-color: #FFFCF8;
-    border-bottom: 1px solid #72483C;
+    border-bottom: 0.5px solid #72483C;
+    padding: 0px 20px;
+    display: flex;
+    justify-content: center;
 }
+
 
 @media (min-width: 600px) {
     
@@ -418,6 +427,18 @@ button:hover {
         flex-direction: column;
         justify-content: center;
         margin: 30px;
+    }
+
+    /* designselv menu*/
+    .designselv__menu__button {
+        font-size: 0.8rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1rem; /* 150% */
+        background-color: transparent;
+        height: 30px;
+        width: auto;
+        margin: 20px;
     }
     
 }
@@ -686,6 +707,17 @@ button:hover {
         width: 50%;
     }
 
+    /* designselv menu*/
+    .designselv__menu__button {
+        font-size: 1rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.875rem; /* 150% */
+        background-color: transparent;
+        height: 30px;
+        width: auto;
+        margin: 20px;
+    }
 
 
 }
