--- a/main.css
+++ b/main.css
@@ -346,7 +346,7 @@ button:hover {
     right:1rem;
 }
 
-/*footer*/
+/*-sek*/
 .footer {
     background-color: #FFFEF9;
     border-top: 1px solid #FFFEF9;
@@ -422,37 +422,11 @@ footer details[open] .footer-indhold {
 }
 
 
-.kontakt_liwira, .folg_os{
+.kontakt_liwira, .abningstider_liwira{
     font-family: Archivo;
     color:#000;
 }
 
-.footer-sektion p {
-    font-family: Archivo;
-    font-size: 1rem;
-}
-
-.kontakt_os {
-    font-family: Archivo;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #000;
-    font-size: 1.25rem;
-    padding-left: 20px;
-    margin-bottom: 5%;
-    font-weight: bold;
-    text-align: left;
-}
-
-.footer-sektion.kontakt-information {
-    margin-bottom: 10%;
-}
-
-.footer-sektion.kontakt-information p {
-    margin-bottom: 3%;
-    padding-left: 20px;
-}
 
 .footer_logo {
     width:150px;
@@ -468,10 +442,6 @@ footer details[open] .footer-indhold {
     margin-bottom: 7%;
 }
 
-#faq {
-    margin-top: 30px;
-    color: #000;
-}
 
 /* designselv menu*/
 .designselv__menu__button {
@@ -858,16 +828,6 @@ footer details[open] .footer-indhold {
         color: #000;
     }
     
-    .footer-sektion {
-        display: flex;
-        flex: 1;
-        margin-right: 20px;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-        flex: 1;
-    }
-    
     .footer-sektion:last-child {
         margin-right: 0;
     }
@@ -876,7 +836,7 @@ footer details[open] .footer-indhold {
         padding-top:15px;
     }
 
-    .kontakt_liwira,.folg_os{
+    .kontakt_liwira,.abningstider_liwira{
         font-size: 19px;
         font-weight: bold;
         color: #000;
@@ -917,17 +877,7 @@ footer details[open] .footer-indhold {
         padding-top:10px;
         margin: 0;
     }
-    .kontakt_os{
-        font-family: Archivo;
-        font-size: 19px;
-        font-weight: bold;
-        color:#000;
-        padding-top:60px;
-        padding-bottom:20px;
-    }
-    .footer-sektion.kontakt-information p{
-        margin-bottom:15px;
-    }
+    
     .footer_logo {
         width: 200px;
         height:70px;
@@ -935,15 +885,5 @@ footer details[open] .footer-indhold {
         padding-bottom:10px;
         margin:20px 0 7px 0;
     }
-    .footer-sektion.kontakt p{
-        padding-left:20px;
-        padding-top:0;
-    }
     
-    #faq {
-        color: #000;
-        text-decoration: underline;
-        cursor: pointer;
-    }
-
 }
