--- a/main.css
+++ b/main.css
@@ -654,22 +654,32 @@ footer details[open] .footer-indhold {
     }
 
     .udvalg__informations__boks {
-        width: 423px;
-        height: 550px;
+        width: 30.8%;
+        height: 100%;
     }
 
     .udvalg__img__h3 {
-        width: 423px;
-        height: 448px;
+        width: 100%;
+        height: 100%;
     }
 
     .designselv__udvalg__h3 {
-        margin: 5px 0px 5px 5px;
+        margin: 5px 0px 0px 10px;
     }
 
     .designselv__udvalg__p {
-        margin: 0px 0px 0px 5px;
+        margin: 0px 0px 0px 10px;
     }
+
+    .designselv__udvalg {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .designselv__udvalg__button {
+        margin: 0px 0px 15px 0px;
+    }
+
 }
 
 @media (min-width: 1024px) {
@@ -948,30 +958,6 @@ footer details[open] .footer-indhold {
         width: auto;
         margin: 20px;
     }
-
-    .udvalg__informations__boks {
-        width: 443px;
-        height: 590px;
-    }
-
-    .udvalg__img__h3 {
-        width: 443px;
-        height: 469px;
-    }
-
-    .designselv__udvalg__h3 {
-        margin: 5px 0px 0px 5px;
-    }
-
-    .designselv__udvalg__p {
-        margin: 0px 0px 0px 5px;
-    }
-
-    .designselv__udvalg {
-        display: flex;
-        flex-direction: row;
-    }
-
 
     /* footer */
 
