footer links fjernet

--- a/main.css
+++ b/main.css
@@ -1058,7 +1058,7 @@ button.active {
     /*designselv kurv*/
 
     .designselv{
-        padding-top:1rem;
+        padding:30px 0 30px 0;
     }
 
     .designselv__indhold{
