--- a/main.css
+++ b/main.css
@@ -418,18 +418,18 @@ main {
     width: 100%;
     background-color: #C39B7F;
     height: 30px;
-    padding: 20px 3px;
 }
 
 .footer__top__img {
     width: 100%;
+    padding: 10px 10%;
 }
 
-.footer {
+.footer__bottom {
     background-color: #D9C4B0;
     border-top: 1px solid #FFFCF8;
     flex-grow: 1;
-    padding-bottom: 10%;
+    padding-bottom: 5%;
 }
 
 .footer-knap {
@@ -812,6 +812,19 @@ button.active {
         margin: 0px 0px 15px 0px;
     }
 
+    /* footer */
+    .footer__top {
+        width: 100%;
+        background-color: #C39B7F;
+        height: 40px;
+    }
+    
+    .footer__top__img {
+        width: 70%;
+        padding: 13px 0px;
+        margin: 0px 16%;
+    }
+
 }
 
 @media (min-width: 1024px) {
@@ -1128,8 +1141,19 @@ button.active {
     }
 
     /* footer */
+    .footer__top {
+        width: 100%;
+        background-color: #C39B7F;
+        height: 40px;
+    }
 
-    .footer {
+    .footer__top__img {
+        width: 30%;
+        padding: 13px 0px;
+        margin: 0px 35%;
+    }
+    
+    .footer__bottom {
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
