--- a/main.css
+++ b/main.css
@@ -507,7 +507,6 @@ footer details[open] .footer-indhold {
     width:150px;
     height: 40px;
     margin-top: 6%;
-    margin-bottom: 5%;
     padding-left: 17px;
 }
 
@@ -1160,6 +1159,7 @@ button.active {
         background-color: #D9C4B0;
         font-family: Arial, sans-serif;
         color: #000;
+        padding: 0px 60px;
     }
     
     .footer-sektion:last-child {
@@ -1170,21 +1170,22 @@ button.active {
         padding-top:15px;
     }
 
-    .kontakt_liwira,.abningstider_liwira{
+    .kontakt_liwira,.abningstider_liwira, .folg_os{
         font-size: 19px;
         font-weight: bold;
-        color: #000;
         margin-bottom: 10px;
         padding-top:50px;
-        padding-left:40px;
-        
+        padding-left:20px; 
     }
+
     .footer-knap span {
         display: none;
     }   
     
     .footer-indhold {
         display: block; 
+        padding-left: 40px;
+        padding-bottom: 60px;
     }
     
     .footer-indhold ul {
