--- a/main.css
+++ b/main.css
@@ -559,12 +559,13 @@ footer details[open] .footer-indhold {
 }
 
 .designselv__billede-container{
-    text-align: center;
+    margin: auto;
 }
 
 .dingavekurv__billede{
-    max-width:100%;
-    height:auto;
+    width: 300px;
+    height: 400px;
+    margin: 15px;
 }
 
 .designselv__titel{
@@ -579,6 +580,7 @@ footer details[open] .footer-indhold {
     background: #FFFCF8;
     padding:1.5rem;
     border-radius: 1rem;
+    margin: 15px 20px;
 }
 
 .designselv__items{
@@ -589,8 +591,8 @@ footer details[open] .footer-indhold {
 .designselv__items li{
     display: flex;
     justify-content: space-between;
-    margin:0.5rem;
-    border-bottom: 1px solid #210700;
+    margin:0.rem;
+    border-bottom: 1.5px solid #cdcdcd;
 }
 
 #tilfojTilKurv {
@@ -699,22 +701,42 @@ button.active {
 
 /* designselv interaktiv*/
 
+.billede-wrapper {
+    position: relative;
+    display: inline-block; /* gør at positionering følger billedet */
+}
+
 .valgte__items__chokolade {
-    width: 20%;
+    width: 110px;
     position: absolute;
+    left: 40%;
+    top: 40%;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .valgte__items__kanin {
-    width: 20%;
+    width: 140px;
+    position: absolute;
+    left: 25%;
+    top: 43%;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .valgte__items__kop {
-    width: 20%;
-}
-
-.valgte__items {
+    width: 100px;
+    position: absolute;
+    left: 54%;
+    top: 49%;
+    z-index: 10;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .fjern__button {
@@ -722,6 +744,7 @@ button.active {
     color: #210700;
     font-size: medium;
     width: 40px;
+    font-weight: 400;
 }
 
 .desinselv__items__li {
@@ -731,7 +754,10 @@ button.active {
     font-style: normal;
     font-weight: 400;
     line-height: 0.875rem;
+    display: flex;
+    align-items: center;
 }
+
 
 @media (min-width: 600px) {
     
@@ -879,6 +905,31 @@ button.active {
 
     .deslingselv__gallery__boks{
         padding-bottom: 1rem;
+    }
+
+    /* designselv interaktiv*/
+    .valgte__items__chokolade {
+        width: 130px;
+        position: absolute;
+        top: 250px;
+        left: 110px;
+        z-index: 10;
+    }
+
+    .valgte__items__kanin {
+        width: 140px;
+        position: absolute;
+        top: 300px;
+        left: 60px;
+        z-index: 10;
+    }
+    
+    .valgte__items__kop {
+        width: 100px;
+        position: absolute;
+        top: 350px;
+        left: 170px;
+        z-index: 10;
     }
 
     /* footer */
@@ -1159,29 +1210,42 @@ button.active {
 
     .designselv__indhold{
         flex: 0 0 50%;
-        max-width:50%;
         padding: 0 10rem 0 2rem;
+        margin: 30px 0px 0px 0px;
     }
 
-    .billede-wrapper{
-        height:70vh;
-        overflow:hidden;
-        position: relative;
+    .dingavekurv__billede{
+        width: 450px;
+        height: 550px;
+        margin: 15px;
     }
 
-    .dingavekurv__billede{ 
-        position: relative;
-        top: -15%;
-        max-width: 100%;
-        max-height:80vh;
+    /* designselv interaktiv*/
+    .valgte__items__chokolade {
+        width: 160px;
+        position: absolute;
+        top: 460px;
+        left: 195px;
+        z-index: 10;
     }
 
-    .designselv__billede-container{
-        overflow:hidden;
-        flex: 0 0 50%;
+    .valgte__items__kanin {
+        width: 190px;
+        position: absolute;
+        top: 520px;
+        left: 100px;
+        z-index: 10;
+    }
+    
+    .valgte__items__kop {
+        width: 150px;
+        position: absolute;
+        top: 570px;
+        left: 270px;
+        z-index: 10;
     }
 
-     /*find-gavekurv*/
+    /*find-gavekurv*/
 
     #galleri__prevButton,
     #galleri__nextButton{
@@ -1304,4 +1368,32 @@ button.active {
         margin:20px 0 7px 0;
     }
     
+}
+
+@media (min-width: 1250px) {
+
+    .valgte__items__chokolade {
+        width: 160px;
+        position: absolute;
+        top: 420px;
+        left: 285px;
+        z-index: 10;
+    }
+
+    .valgte__items__kanin {
+        width: 190px;
+        position: absolute;
+        top: 460px;
+        left: 190px;
+        z-index: 10;
+    }
+    
+    .valgte__items__kop {
+        width: 150px;
+        position: absolute;
+        top: 510px;
+        left: 370px;
+        z-index: 10;
+    }
+
 }
