--- a/main.css
+++ b/main.css
@@ -885,6 +885,8 @@ button.active {
     .udvalg__img__h3 {
         width: 100%;
         height: 100%;
+        font-size: 0.7rem;
+        line-height: 0.8rem;
     }
 
     .designselv__udvalg__h3 {
@@ -1246,6 +1248,13 @@ button.active {
         z-index: 10;
     }
 
+    .udvalg__img__h3 {
+        width: 100%;
+        height: 100%;
+        font-size: 1rem;
+        line-height: 1rem;
+    }
+
     /*find-gavekurv*/
 
     #galleri__prevButton,
@@ -1285,6 +1294,8 @@ button.active {
     .deslingselv__gallery__boks{
         padding-bottom: 3rem;
     }
+
+
 
 
     /* footer */
