--- a/main.css
+++ b/main.css
@@ -847,6 +847,10 @@ button.active {
         padding-bottom:0.8rem;
     
     }
+
+    .forside__find-gavekurv__galleri::after{ /*denne fader billedet til højre*/
+        height:450px;
+    }
     
 
     /*designselv kurv*/
@@ -1207,6 +1211,10 @@ button.active {
         width: 185px;
         height: 50px;
         font-size: 1rem;
+    }
+
+    .forside__find-gavekurv__galleri::after{ /*denne fader billedet til højre*/
+        height:450px;
     }
 
     /*designselv kurv*/
