hoverfarve ændret på pilene

--- a/main.css
+++ b/main.css
@@ -429,7 +429,7 @@ main {
 
 #galleri__prevButton:hover, 
 #galleri__nextButton:hover{
-    color:#210700;
+    color:#D9C4B0;
 }
 
 #galleri__prevButton{
